--- a/Landlord Credit Check/css/styles.css
+++ b/Landlord Credit Check/css/styles.css
@@ -174,6 +174,30 @@ table {
 	color:hsla(360, 0%, 45%, 1);
 }
 
+
+#tablepricelist {
+	border-bottom: 1px solid;
+	width:550px;
+	margin-left:50px;
+	margin-bottom:80px;
+	padding-bottom:50px;
+	font-size:.95em;
+	margin-top:20px;]
+}
+
+#tablepricelist td {
+	padding-top:10px;
+	padding-bottom:10px;
+}
+
+.bottomborder {
+	border-bottom:1px solid black;
+} 
+
+.underline {
+	text-decoration:underline;
+}
+
 #spacingtable {
 
 }
