--- a/Landlord Credit Check/css/styles.css
+++ b/Landlord Credit Check/css/styles.css
@@ -285,6 +285,18 @@ fieldset {
 	background-color: hsla(265, 0%, 55%, .5);
 }
 
+#reset {
+	margin-top:20px;
+	background-color: hsla(265, 0%, 55%, 1);
+	border:1px solid hsla(265, 0%, 55%, 1);
+	padding:5px 10px;
+}
+
+#reset:hover {
+	background-color: hsla(265, 0%, 55%, .5);
+}
+
+
 #joinform {
 	float:left;
 	width:245px;	
@@ -390,4 +402,42 @@ a:hover {
  
 #membertable a:hover {
                 color:hsla(243, 100%, 50%, .25);
+}
+
+#contactform {
+                width:350px;
+                float:left;
+                margin-top:30px;
+                margin-left:40px;
+                margin-bottom:100px;
+}
+ 
+ 
+#contactform h2 {
+                font-size: 1.3em;
+}
+ 
+#contactpage {
+                width:200px;
+                float:left;
+                clear:both;
+                margin-top:30px;
+                margin-left:40px;
+}
+ 
+#contactpage a {
+                color:blue;
+}
+ 
+#contactpage a:link {
+                color:blue;
+}
+ 
+#contactpage h2 {
+                font-size:1.3em;
+}
+ 
+.comments {
+                height:100px;
+                width:275px;
 }
